cabal-version:       2.4
name:                kadena-signing-api
version:             0.1
synopsis:            Signing API facilitating seamless dapp / wallet interop
-- description:
homepage:            https://github.com/kadena-io/signing-api
bug-reports:         https://github.com/kadena-io/signing-api/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          doug@kadena.io
copyright:           Kadena LLC
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Kadena.SigningApi
  build-depends:
      aeson ^>= 1.4.2.0
    , base >= 4.12.0.0 && < 4.14
    , data-default ^>= 0.7
    , lens >= 4.17 && < 4.19
    , pact >= 4.0.0.11
    , servant >= 0.15 && < 0.17
    , split ^>= 0.2
    , text >= 1.0 && < 1.3
    , unordered-containers >= 0.2.10 && < 0.3

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: main.hs
  hs-source-dirs: tests
  if impl(ghcjs)
    buildable: False
  build-depends:
      hedgehog
    , base
    , text >= 1.0 && < 1.3
    , kadena-signing-api
